@@ -1,5 +1,9 @@
 2005-12-30 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/Win_GParted.cc: fixed alignments of cells in combo_devices
+
+2005-12-30 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Win_GParted.h,
 	  src/Win_GParted.cc: replaced deprecated OptionMenu with ComboBox.
 	  also fixed some issues which arised when no devices were detected.
